# Financial-Assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: gpt_client.py  main.py  rag_system.py  telegram_client.py
data/: faiss_index.idx  telegram_messages.json
